manifests/deployment_template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: '${serviceName}'
  labels:
    app: '${serviceName}'
spec:
  replicas: 2
  selector:
    matchLabels:
      app: '${serviceName}'
  template:
    metadata:
      labels:
        app: '${serviceName}'
    spec:
      containers:
      - name: '${serviceName}'
        image: 'narawitrt/${serviceName}:${version_tag}'
