manifests/service_template.yaml
apiVersion: v1
kind: Service
metadata:
  name: '${serviceName}-service'
  namespace: '${namespace}'
spec:
  clusterIP: None
  ports:
  - name: default
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: '${serviceName}'
  sessionAffinity: None
  type: LoadBalancer
